--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["gusdelact"]
 rustless = "0.10.0"
 iron = "0.4"
 url = "1"
-serde = "0.8"
-serde_json = "0.8"
 valico = "1"
+serde = "1.0.11"
+serde_json = "1.0.2"
+adaptadores = { path = "adaptadores" }
